<resources>
    <string name="app_name">FormActivity</string>
    <string name="user_name">Name</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="user_confirmation">Confirmation</string>
    <string name="user_name_hint">Please enter your name!</string>
    <string name="button_save">SAVE</string>
    <string name="user_email_hint">Please enter your Email!</string>

</resources>
